fix visibility btn

--- a/frontend/src/components/catalog-list/catalog-tile/catalog-tile.module.scss
+++ b/frontend/src/components/catalog-list/catalog-tile/catalog-tile.module.scss
@@ -111,3 +111,10 @@
 .buttonActive {
   color: #a38ffd;
 }
+
+.authorName {
+  font-weight: 500;
+  font-size: 12px;
+  color: #999999;
+  line-height: 15px;
+}
